# speechiness-vs-narrativity

./: .gitignore  LICENSE  README.md  pyproject.toml
csv/: ARISTOPHANES_messenger_speech_narrativity.csv  epic_gender_narrativity.csv  epic_speakers_narrativity.csv  epic_speech_narrativity.csv  messenger_speech_narrativity.csv  saliency_candidates.txt
json/: messenger_speeches.json  tlg0006.tlg001.perseus-grc2.json  tlg0006.tlg002.perseus-grc2.json  tlg0006.tlg003.perseus-grc2.json  tlg0006.tlg004.perseus-grc2.json  tlg0006.tlg005.perseus-grc2.json  tlg0006.tlg006.perseus-grc2.json  tlg0006.tlg007.perseus-grc2.json  tlg0006.tlg008.perseus-grc2.json  tlg0006.tlg009.perseus-grc2.json  tlg0006.tlg010.perseus-grc2.json  tlg0006.tlg011.perseus-grc2.json  tlg0006.tlg012.perseus-grc2.json  tlg0006.tlg013.perseus-grc2.json  tlg0006.tlg014.perseus-grc2.json  tlg0006.tlg015.perseus-grc2.json  tlg0006.tlg016.perseus-grc2.json  tlg0006.tlg017.perseus-grc2.json  tlg0006.tlg018.perseus-grc2.json  tlg0006.tlg019.perseus-grc2.json  tlg0011.tlg001.perseus-grc2.json  tlg0011.tlg002.perseus-grc2.json  tlg0011.tlg003.perseus-grc2.json  tlg0011.tlg004.perseus-grc2.json  tlg0011.tlg005.perseus-grc2.json  tlg0011.tlg006.perseus-grc2.json  tlg0011.tlg007.perseus-grc2.json  tlg0011.tlg008.perseus-grc2.json  tlg0019.tlg001.perseus-grc2.json  tlg0019.tlg002.perseus-grc2.json  tlg0019.tlg003.perseus-grc2.json  tlg0019.tlg004.perseus-grc2.json  tlg0019.tlg005.perseus-grc2.json  tlg0019.tlg006.perseus-grc2.json  tlg0019.tlg007.perseus-grc2.json  tlg0019.tlg008.perseus-grc2.json  (+10 more)
markdown/: doc.docx  (+1 more)
(+12 files in other folders)
